examples/test/testpolicy17762.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17762
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key29: value30
      key35: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value30
          key3: value9
          key11: value21
      podSelector:
        matchLabels:
          key5: value6
          key31: value4
